--- a/Admin It Helpdesk/newProblemTicket.html
+++ b/Admin It Helpdesk/newProblemTicket.html
@@ -111,7 +111,7 @@
 
       <!-- Problem Ticket Form -->
       <div class="bg-white p-4 rounded shadow-sm">
-        <form id="problem-ticket-form">
+        <form id="problem-ticket-form" novalidate>
           <!-- Username Field -->
           <div class="mb-3">
             <label for="username" class="form-label">Username</label>
@@ -532,9 +532,19 @@
         });
 
         // Form validation
-        const form = document.querySelector("form");
-        form.addEventListener("submit", function (event) {
+        const form = document.getElementById("problem-ticket-form");
+        const submitBtn = document.getElementById("submit-btn");
+
+        submitBtn.addEventListener("click", function (event) {
           event.preventDefault();
+
+          // Trigger HTML5 validation
+          const isFormValid = form.checkValidity();
+          if (!isFormValid) {
+            // Trigger browser's built-in validation UI
+            form.reportValidity();
+            return;
+          }
 
           // Get form fields
           const username = document.getElementById("username").value;
@@ -542,38 +552,11 @@
           const department = document.getElementById("department").value;
           const category = document.getElementById("category").value;
           const subject = document.getElementById("subject").value;
-          const description = document.getElementById("description").value;
+          const description =
+            document.getElementById("description").innerText ||
+            document.getElementById("description").textContent;
 
-          // Check if device details should be collected
-          const includeDeviceDetails = document.getElementById(
-            "includeDeviceDetails"
-          ).checked;
-          let deviceDetails = {};
-
-          if (includeDeviceDetails) {
-            const deviceType = document.querySelector(
-              'input[name="device-type"]:checked'
-            );
-            const deviceBrand = document.getElementById("device-brand").value;
-            const deviceSN = document.getElementById("device-id").value;
-
-            if (!deviceType) {
-              Swal.fire({
-                icon: "error",
-                title: "Oops...",
-                text: "Please select a device type!",
-              });
-              return;
-            }
-
-            deviceDetails = {
-              type: deviceType.value,
-              brand: deviceBrand,
-              serialNumber: deviceSN,
-            };
-          }
-
-          // Simple validation
+          // Additional JavaScript validation
           if (
             !username ||
             !contactNumber ||
@@ -590,15 +573,10 @@
             return;
           }
 
-          // Store notification flag for My Tickets page
-          localStorage.setItem("showTicketNotification", "true");
-          localStorage.setItem(
-            "ticketNotificationMessage",
-            "Problem ticket has been successfully submitted."
-          );
+          console.log("Form submitted, redirecting...");
 
-          // Redirect to My Tickets page
-          window.location.href = "myTicket(s).html";
+          // Redirect to Home page with notification parameter
+          window.location.href = "Home.html?showNotification=true";
         });
       });
     </script>
