Fix button typo in components.html, update solved ticket count in Home.html, and enhance ticket status icons. Refactor user interface in components-user.html and Home.html for improved layout and responsiveness. Update styles for better visual consistency across the application.

--- a/Admin It Helpdesk/Home.html
+++ b/Admin It Helpdesk/Home.html
@@ -231,7 +231,7 @@
             <div class="icon solved-tickets">
               <i class="fas fa-check"></i>
             </div>
-            <div class="number">5.555</div>
+            <div class="number">10.555</div>
             <div class="description">Solved Ticket(s)</div>
             <div class="sub-description">
               <i class="fas fa-chart-line me-1 text-success"></i>
@@ -522,7 +522,7 @@
           <div class="ticket-header">
             <div class="ticket-title">
               <div class="ticket-status status-expired">
-                <i class="fas fa-clock"></i>
+                <i class="fa-solid fa-circle-xmark"></i>
               </div>
               <div>
                 <h4>Reset Password Wifi dan Device Wifi Login</h4>
