--- a/Admin It Helpdesk/components.html
+++ b/Admin It Helpdesk/components.html
@@ -160,7 +160,7 @@
           </form>
         </div>
       </div>
-      <button class="check-in-btn mt-1">CHECK IN</button>
+      <buttx  on class="check-in-btn mt-1">CHECK IN</button>
     </div>
   </div>
 </div>
