--- a/User It Helpdesk/knowledge-base.html
+++ b/User It Helpdesk/knowledge-base.html
@@ -22,7 +22,7 @@
     <!-- Navigation Bar -->
     <div id="navbar-container"></div>
 
-    <div class="hero-section">
+    <div class="hero-section kb-center">
       <h1>Knowledge Base</h1>
       <p>
         Pusat dokumentasi dan panduan troubleshooting untuk masalah IT. Temukan
