Add footer component to multiple pages, update navbar logo, and enhance styles for new problem page. Improved layout and responsiveness across the application, including adjustments to ticket stats and assistance sections.

--- a/User It Helpdesk/view-detail.html
+++ b/User It Helpdesk/view-detail.html
@@ -191,6 +191,9 @@
       </div>
     </div>
 
+    <!-- Footer -->
+    <div id="footer-container"></div>
+
     <!-- WhatsApp Button -->
     <div id="whatsapp-container"></div>
 
@@ -235,6 +238,10 @@
               window.ITHelpdesk.includeComponent(
                 "whatsapp-component",
                 "whatsapp-container"
+              );
+              window.ITHelpdesk.includeComponent(
+                "footer-component",
+                "footer-container"
               );
               window.ITHelpdesk.setActiveNavigation();
             }
