--- a/User It Helpdesk/Home.html
+++ b/User It Helpdesk/Home.html
@@ -128,6 +128,14 @@
       </div>
     </div>
 
+    <!-- Footer -->
+    <div class="text-center py-3" style="background-color: #f8f9fa; border-top: 1px solid #e1e1e1; margin-top: 30px;">
+      <p class="mb-0" style="color: #666;">© 2023 Trans 7. All Rights Reserved.</p>
+    </div>
+
+    <!-- Footer Component (from components-user.js) -->
+    <div id="footer-container"></div>
+
     <!-- WhatsApp Button -->
     <div id="whatsapp-container"></div>
 
@@ -172,6 +180,10 @@
               window.ITHelpdesk.includeComponent(
                 "whatsapp-component",
                 "whatsapp-container"
+              );
+              window.ITHelpdesk.includeComponent(
+                "footer-component",
+                "footer-container"
               );
               window.ITHelpdesk.setActiveNavigation();
             }
