--- a/User It Helpdesk/mytickets.html
+++ b/User It Helpdesk/mytickets.html
@@ -133,11 +133,59 @@
         text-align: center;
       }
 
-      /* Add left alignment for the button */
+      .hero-content h1 {
+        text-align: center;
+        margin-bottom: 15px;
+      }
+
+      .hero-content p {
+        text-align: center;
+        margin-bottom: 20px;
+      }
+
+      /* Center the report button */
       #report-button {
         display: inline-block;
         text-align: center;
-        margin-top: 10px;
+        margin: 10px auto 0;
+      }
+
+      /* Ticket stats section styling */
+      .ticket-stats-section {
+        width: 100%;
+        max-width: 100%;
+        margin: 0 auto;
+      }
+
+      .ticket-stats-section .container-fluid {
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 0 15px;
+      }
+
+      .ticket-stats-row {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 20px;
+        margin: 20px 0;
+      }
+
+      .ticket-stat-card {
+        flex: 1;
+        min-width: 220px;
+        background: white;
+        border-radius: 10px;
+        padding: 20px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      /* Add space between status tag and footer */
+      .ticket-tag {
+        margin-bottom: 15px;
       }
 
       /* Tutorial Section Styles - Removed since they are now in global CSS */
@@ -191,12 +239,8 @@
           status terkini, riwayat komunikasi, dan tindak lanjut dari tim IT
           Support.
         </p>
-        <a
-          href="new-problem.html"
-          class="main-button"
-          id="report-button"
-          style="text-align: left; display: block; width: fit-content"
-          >Report your problem</a
+        <a href="new-problem.html" class="main-button" id="report-button"
+          >REPORT YOUR PROBLEM</a
         >
       </div>
     </div>
@@ -336,7 +380,7 @@
             <div class="t-header">
               <div class="ticket-title">
                 <div class="ticket-status status-open">
-                  <i class="fas fa-exclamation-circle"></i>
+                  <i class="fa-duotone fa-solid fa-ticket"></i>
                 </div>
                 <div>
                   <h4>Permohonan Mapping Domain SharePoint Cloud Portal HSE</h4>
@@ -636,6 +680,9 @@
         </div>
       </div>
     </div>
+
+    <!-- Footer -->
+    <div id="footer-container"></div>
 
     <!-- WhatsApp Button -->
     <div id="whatsapp-container"></div>
