--- a/User It Helpdesk/new-problem.html
+++ b/User It Helpdesk/new-problem.html
@@ -66,7 +66,7 @@
 
     <div class="container py-5">
       <div class="row">
-        <div class="col-md-10 mx-auto">
+        <div class="col-md-8">
           <h2 class="mb-4">New Problem Ticket</h2>
 
           <!-- Problem Ticket Form -->
@@ -402,6 +402,59 @@
             </form>
           </div>
         </div>
+
+        <!-- Helper image section -->
+        <div class="col-md-4 d-flex flex-column">
+          <div class="text-center mb-3 pt-4">
+            <!-- Video Tutorial Section -->
+            <div class="bg-white p-3 rounded shadow-sm mb-4">
+              <h5 class="text-primary mb-3">
+                <i class="fas fa-video me-2"></i> Tutorial Video
+              </h5>
+              <div class="new-problem-video">
+                <div class="play-overlay">
+                  <div class="play-button">
+                    <i
+                      class="fas fa-play"
+                      style="color: white; font-size: 24px"
+                    ></i>
+                  </div>
+                </div>
+              </div>
+              <p class="mt-2 mb-0 small text-muted">
+                Click to learn how to submit a ticket
+              </p>
+            </div>
+
+            <!-- Need Assistance Section -->
+            <div class="assistance-section mb-4">
+              <h4 class="text-primary mb-3">Need Assistance?</h4>
+              <p>
+                Our IT support team is ready to help with your technical issues.
+                Fill in the form and we'll get back to you shortly.
+              </p>
+              <div class="assistance-contact">
+                <i class="fas fa-headset"></i>
+                <p class="mb-0">
+                  <strong>Contact:</strong> helpdesk@company.com
+                </p>
+              </div>
+            </div>
+
+            <!-- Image Section -->
+            <div
+              class="helper-image-section"
+              style="padding: 10px; margin-bottom: 20px"
+            >
+              <img
+                src="person1.png"
+                alt="IT Support Slide"
+                class="img-fluid shadow-sm"
+                style="border-radius: 10px"
+              />
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -417,6 +470,23 @@
     <script>
       // Auto-fill the date field with current date
       document.addEventListener("DOMContentLoaded", function () {
+        // Ensure navbar logo is loaded properly
+        const navbarContainer = document.getElementById("navbar-container");
+        if (navbarContainer) {
+          setTimeout(() => {
+            const logo = document.querySelector(".logo img");
+            if (!logo) {
+              // If logo isn't loaded, try reloading the component
+              if (window.ITHelpdesk && window.ITHelpdesk.includeComponent) {
+                window.ITHelpdesk.includeComponent(
+                  "navbar-component",
+                  "navbar-container"
+                );
+              }
+            }
+          }, 200);
+        }
+
         const today = new Date();
         const formattedDate = today.toLocaleDateString("en-GB", {
           day: "2-digit",
