--- a/User It Helpdesk/Home.html
+++ b/User It Helpdesk/Home.html
@@ -129,8 +129,17 @@
     </div>
 
     <!-- Footer -->
-    <div class="text-center py-3" style="background-color: #f8f9fa; border-top: 1px solid #e1e1e1; margin-top: 30px;">
-      <p class="mb-0" style="color: #666;">© 2023 Trans 7. All Rights Reserved.</p>
+    <div
+      class="text-center py-3"
+      style="
+        background-color: #f8f9fa;
+        border-top: 1px solid #e1e1e1;
+        margin-top: 30px;
+      "
+    >
+      <p class="mb-0" style="color: #666">
+        © 2023 Trans 7. All Rights Reserved.
+      </p>
     </div>
 
     <!-- Footer Component (from components-user.js) -->
